# modbus-reader-temperature

./: Cargo.toml  Makefile  readme.md
mb/: Cargo.toml
mb-data/: Cargo.toml
mb-data/src/: config.rs  db.rs  dirs.rs  error.rs  lib.rs  task.rs  user.rs  utils.rs
mb-data/src/db/: config.rs  task.rs  user.rs  voltage.rs
mb-gd/: Cargo.toml
mb-gd/src/: chart.rs  colors.rs  data.rs  db.rs  error.rs  lib.rs  macros.rs  mb_sync.rs  scenes.rs  utils.rs
mb-gd/src/data/: config.rs
mb-gd/src/db/: config.rs  data.rs
mb-gd/src/scenes/: item.rs  item_mbstate.rs  login.rs  main.rs  main_view.rs  my_global.rs  port.rs  programs.rs  setting.rs  sub_window.rs  sys_setting.rs  user_manager.rs  voltage.rs
mb-gd/src/scenes/voltage/: channel.rs  state_tag.rs
mb-mock/: Cargo.toml
mb-mock/src/: lib.rs  main.rs  power.rs  relay.rs  temperature.rs  voltage.rs
mb-read/: Cargo.toml
mb-read/src/: main.rs
mb-reader/: Cargo.toml
mb-reader-gui/: .gitignore  .ignore  ball.gdshader  ball.png.import  easy_charts.svg.import  export_presets.cfg  icon.png.import  icon.svg.import  item.tscn  main.tscn  mbrs.gdextension  project.godot  serialport.tscn  setting.tscn  sub_window.tscn  sys_setting_window_view.tscn  test.tscn
mb-reader-gui/assets/: HarmonyOS_Sans_SC_Regular.ttf.import  ball.png.import  btn_focus.tres  dark.tres  dark_theme.tres  light.tres  light_blue.tres  pane.tres  theme.tres  title.tres
mb-reader-gui/assets/light_blue/: check_checked.png.import  check_checked_dis.png.import  check_tree.png.import  check_tree_im.png.import  (+28 more)
mb-reader-gui/sys/: alert.tscn  file_dialog.tscn  programs.gd  programs.tscn  setting.tscn  setting_win.tscn
mb-reader-gui/user/: login.tscn  user_manager.gd  user_manager.tscn  user_win.tscn
mb-reader-gui/voltage/: channel.tscn  chart.gd  chart.tscn  state_tag.tscn  voltage.tscn
mb-reader/src/: main.rs
mb/src/: error.rs  lib.rs  power.rs  protocol.rs  relay.rs  temperature.rs  utils.rs  voltage.rs
