[workspace]
resolver = "2"
members = [
  "mb",
  "mb-read",
  "mb-mock",
  "mb-data",
  "mb-gd"
]
default-members = [
  "mb-gd"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["erasin"]

[profile.release]
lto = "thin"

[workspace.dependencies]
serialport = "4.3.0"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
