[package]
name = "mb-gd"
version = "0.1.0"
edition = "2021"

[lib]
name="mbgd"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
thiserror.workspace = true
godot = { git = "https://github.com/godot-rust/gdext", branch="master", features = ["experimental-threads"] }
# time = { version = "0.3", features = ["formatting", "local-offset"] }
mb = {path = "../mb"}
mb-data = {path = "../mb-data"}
fern = "0.6"
strum.workspace = true
